--- a/early-access.html
+++ b/early-access.html
@@ -39,7 +39,7 @@
 <body>
   <div class="wrap">
     <header>
-      <a href="index.html" style="display:flex;align-items:center;gap:10px"><img src="C:\\Users\\DAVID\\Downloads\\niggabase\\niggabase\\assets\\niggabase logo.png" alt="Niggabase" style="width:22px;height:22px;object-fit:contain"><strong>Niggabase</strong></a>
+      <a href="index.html" style="display:flex;align-items:center;gap:10px"><img src="assets/niggabase%20logo.png" alt="Niggabase" style="width:22px;height:22px;object-fit:contain"><strong>Niggabase</strong></a>
       <a href="credit-card.html" class="pill">Card details</a>
     </header>
     <main>
