--- a/explore.html
+++ b/explore.html
@@ -24,7 +24,7 @@
   <!-- Coming Soon Overlay -->
   <div id="comingSoon" style="position:fixed;inset:0;z-index:50;display:flex;align-items:center;justify-content:center;background:rgba(12,12,14,.92);backdrop-filter:blur(6px);text-align:center;padding:24px">
     <div>
-      <img src="C:\\Users\\DAVID\\Downloads\\niggabase\\niggabase\\assets\\niggabase logo.png" alt="Niggabase" style="width:56px;height:56px;object-fit:contain;filter:drop-shadow(0 6px 24px rgba(255,255,255,.08))">
+      <img src="assets/niggabase%20logo.png" alt="Niggabase" style="width:56px;height:56px;object-fit:contain;filter:drop-shadow(0 6px 24px rgba(255,255,255,.08))">
       <div style="margin-top:12px;font-weight:800;letter-spacing:-.01em;font-size:28px">Explore is coming soon</div>
       <div style="margin-top:6px;color:#a3a3a3;max-width:560px">We’re polishing listings and charts. Check back later for the full drop.</div>
       <div style="margin-top:8px;color:#c9c9c9;font-size:13px">Scout New Licks – Find the Next Pump Before Ops Do.</div>
@@ -38,7 +38,7 @@
     <!-- Sidebar -->
     <aside class="hidden lg:flex w-64 flex-col border-r border-white/10 bg-neutral-950/95 backdrop-blur-sm">
       <div class="h-16 flex items-center px-5 border-b border-white/10">
-        <img src="C:\\Users\\DAVID\\Downloads\\niggabase\\niggabase\\assets\\niggabase logo.png" alt="Niggabase" class="w-8 h-8 rounded-lg object-contain"/>
+        <img src="assets/niggabase%20logo.png" alt="Niggabase" class="w-8 h-8 rounded-lg object-contain"/>
         <span class="ml-3 text-lg font-black tracking-tight brand-gradient" style="letter-spacing:-0.02em">Niggabase</span>
       </div>
       <nav class="flex-1 overflow-y-auto px-2 py-3">
