--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div class="screen">
     <div id="splash" class="splash">
       <div style="text-align:center">
-        <img src="C:\\Users\\DAVID\\Downloads\\niggabase\\niggabase\\assets\\niggabase logo.png" alt="Niggabase" style="width:64px;height:64px;object-fit:contain;filter:drop-shadow(0 8px 30px rgba(255,215,106,.25))">
+        <img src="assets/niggabase%20logo.png" alt="Niggabase" style="width:64px;height:64px;object-fit:contain;filter:drop-shadow(0 8px 30px rgba(255,215,106,.25))">
         <div style="margin-top:8px;font-weight:700;letter-spacing:.02em;color:#ffe596">Niggabase</div>
         <div class="spinner" style="margin:16px auto 0"></div>
       </div>
@@ -99,10 +99,10 @@
     <div class="blob b"></div>
     <div class="blob c"></div>
 
-    <div class="brandTag"><img src="C:\\Users\\DAVID\\Downloads\\niggabase\\niggabase\\assets\\niggabase logo.png" alt="Niggabase"><span>Niggabase</span></div>
+    <div class="brandTag"><img src="assets/niggabase%20logo.png" alt="Niggabase"><span>Niggabase</span></div>
 
     <main class="hero">
-      <div class="logo"><img src="C:\\Users\\DAVID\\Downloads\\niggabase\\niggabase\\assets\\niggabase logo.png" alt="Niggabase" style="width:72px;height:72px;object-fit:contain"></div>
+      <div class="logo"><img src="assets/niggabase%20logo.png" alt="Niggabase" style="width:72px;height:72px;object-fit:contain"></div>
       <div class="glow"></div>
       <h1><span class="brandWord">Niggabase</span><span class="sub">the first Niggalized Exchange (NEX)</span></h1>
       <p>an exchange built by real niggas</p>
