--- a/niggabase.html
+++ b/niggabase.html
@@ -25,7 +25,7 @@
       <!-- Sidebar -->
       <aside class="hidden lg:flex w-64 flex-col border-r border-white/10 bg-neutral-950/95 backdrop-blur-sm">
         <div class="h-16 flex items-center px-5 border-b border-white/10">
-          <img src="C:\\Users\\DAVID\\Downloads\\niggabase\\niggabase\\assets\\niggabase logo.png" alt="Niggabase" class="w-8 h-8 rounded-lg object-contain"/>
+          <img src="assets/niggabase%20logo.png" alt="Niggabase" class="w-8 h-8 rounded-lg object-contain"/>
           <span class="ml-3 text-lg font-black tracking-tight brand-gradient">Niggabase</span>
         </div>
         <nav class="flex-1 overflow-y-auto px-2 py-3">
